Updated project version to 1.0.2, added "remember me" functionality using AWS Secrets Manager, modified titles and headers from "Grocery List" to "Shopping List," updated IntelliJ project settings, and disabled SQL logging in application properties.

--- a/Groceries-App-Backend/src/main/resources/templates/index.html
+++ b/Groceries-App-Backend/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <title>Grocery List</title>
+    <title>Shopping List</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Inter font (optional) -->
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>Grocery List</h1>
+        <h1>Shopping List</h1>
         <button
                 class="logout-btn"
                 onclick="logout()"
