--- a/Groceries-App-Backend/src/main/resources/templates/error.html
+++ b/Groceries-App-Backend/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8">
-  <title>Error - Grocery List</title>
+  <title>Error - Shopping List</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/app.css">
