--- a/Groceries-App-Backend/src/main/resources/templates/login.html
+++ b/Groceries-App-Backend/src/main/resources/templates/login.html
@@ -150,6 +150,7 @@
                 <input type="password" name="password" autocomplete="current-password" required/>
             </label>
         </div>
+        <input type="hidden" name="remember-me" value="true" />
         <div>
             <input type="submit" value="Sign In"/>
         </div>
