- Add `AdminService` for user management - Update APIs and templates to use `AdminService` - Fix frontend issues in `login.html` and `create-user.html` - Add utility method `nextId` to `Utils` - Update `AuthUtils` with password encoding logic - Rename `secretName` in `AWSSMHandler` for consistency

--- a/Shopping-List-App/src/main/resources/templates/login.html
+++ b/Shopping-List-App/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
             min-height: 100vh;
         }
         body {
-            displayService: flex;
+            display: flex;
             align-items: center;
             justify-content: center;
             min-height: 100vh;
@@ -65,14 +65,14 @@
             color: var(--alert-success-text);
         }
         form {
-            displayService: flex;
+            display: flex;
             flex-direction: column;
             align-items: center;
         }
         form > div {
             width: 100%;
             margin-bottom: 1rem;
-            displayService: flex;
+            display: flex;
             flex-direction: column;
             align-items: center;
         }
@@ -80,7 +80,7 @@
             font-size: 1rem;
             color: var(--text-main);
             width: 100%;
-            displayService: flex;
+            display: flex;
             flex-direction: column;
             align-items: flex-start;
         }
