Simplify placeholder text in `index.html` input field.

--- a/Shopping-List-App/src/main/resources/templates/index.html
+++ b/Shopping-List-App/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
             <input
                     type="text"
                     id="add-input"
-                    placeholder="Add grocery itemService..."
+                    placeholder="Add item"
                     onkeydown="if(event.key==='Enter'){ addGroceryItem(); }"
             />
             <button
